--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -14,10 +14,10 @@
       "height": 800,
       "icon": "/engine/public/favicon.ico",
       "enableInspector": true,
-      "borderless": false,
+      "borderless": true,
       "maximize": false,
       "hidden": false,
-      "resizable": false
+      "resizable": true
     }
   },
   "cli": {
